--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h1>Bringing Customers</h1>
           <h2>To Our Clients</h2>
           <p>...With A Stupendous ROI</p>
-          <button class="main__btn"><a href="/">Recieve More</a></button>
+          <button class="main__btn"><a href="/">Win The Race</a></button>
         </div>
         <div class="main__img--container">
           <img src="images/pic1.svg" alt="pic" id="main__img" />
@@ -57,41 +57,23 @@
     </div>
 
     <div class="services">
-      <h1>See what the hype is about</h1>
+      <h1>Tired Of Losing The Marketing Race To Your Competitors?</h1>
       <div class="services__container">
         <div class="services__card">
-          <h2>Experience Bliss</h2>
-          <p>AI Powered Technology</p>
-          <button>Get Started</button>
+          <h2>Experience Solace</h2>
+          <p>Reclaim Your Clients</p>
+          <button>Win The Race</button>
         </div>
         <div class="services__card">
           <h2>Are You Ready?</h2>
           <p>Take The Edge On Your Competitors</p>
-          <button>Get Started</button>
+          <button>Win The Race</button>
         </div>
       </div>
     </div>
     <!--  
     <div class="footer__container">
       <div class="footer__links">
-        <div class="footer__links--wrapper">
-          <div class="footer__links--items">
-            <h2>About Us</h2>
-            <a href="/">How it works</a>
-            <a href="/">Testimonials</a>
-            <a href="/">Careers</a>
-            <a href="/">Investments</a>
-            <a href="/">Terms of Service</a>
-          </div>
-          <div class="footer__links--items">
-            <h2>Contact Us</h2>
-            <a href="/">Contact</a>
-            <a href="/">Support</a>
-            <a href="/">Destinations</a>
-            <a href="/">Sponsorships</a>
-            <a href="/">Facebook</a>
-          </div>
-        </div>
         <div class="footer__links--wrapper">
           <div class="footer__links--items">
             <h2>About Us</h2>
